fix: width overflows container hiding scrollbar; closes #14

--- a/src/main.scss
+++ b/src/main.scss
@@ -54,7 +54,6 @@ body, html {
   font-size: calc(var(--sn-stylekit-font-size-editor) - 0.1rem);
 
   flex: 1 1 auto;
-  width: 100%;
   height: 100%;
   resize: none;
 
